# pem-study

./: .gitignore  README.md  api_settings.json  example_cfr.csv  pyproject.toml  readme.md  requirements.txt  zip_repo.py
antenna_device_library/: Indoor_P2P_1rx_6p0GHz.json  Indoor_P2P_1tx_5p5GHz_ffd.json  Indoor_P2P_1tx_6p0GHz.json  Indoor_P2P_2rx_5p5GHz_ffd.json  Indoor_P2P_2rx_6p0GHz.json  TDD_example_2rx_15GHz_CPI_40ms.json  TDD_example_2tx_15GHz_CPI_40ms.json  beam.ffd  dipole_5p5.ffd  dipole_x.ffd  dipole_y.ffd  example_16rx_30GHz.json  example_16tx_30GHz.json  example_1rx.json  example_1rx_2.14GHz.json  example_1rx_2modes.json  example_1tx.json  example_1tx_16rx.json  example_1tx_1rx.json  example_1tx_1rx_FREQPULSE.json  example_1tx_2.14GHz_38901.json  example_1tx_2modes.json  example_1tx_30GHz.json  example_1tx_30GHz_dipole.json  example_1tx_8rx.json  example_1tx_8rx_FreqPulse.json  example_32tx_30GHz.json  isotropic_phi.ffd  isotropic_theta.ffd  isotropic_total.ffd  readme.md
antenna_device_library/AWR_1642/: awr_1642.json  rx1.ffd  rx2.ffd  rx3.ffd  rx4.ffd  tx1.ffd  tx2.ffd
example_scripts/: readme.md
example_scripts/AI-ML_Example/: Comms_Synthetic_Data_Gen_Example.py  Drone_Bird_Data_Generator.py  (+3 more)
materials/: material_library.json  material_properties_ITU_3.85GHz.json  material_properties_ITU_77.0GHz.json
models/: readme.md
pem_utilities/: Convert_FFD_to_GLTF.py  FarFieldData.py  __init__.py  actor.py  animation_selector_CMU.py  antenna_device.py  barker_code.py  beamformer.py  calculate_ITU_materials.py  cfar.py  convert_2d_cuts_to_3d.py  convert_mvg_to_ffd.py  convert_ply_to_vtp_with_tex.py  coordinate_system.py  create_forest.py  debugging_utils.py  domain_transforms.py  far_fields.py  heat_map.py  load_deepsense_6g.py  load_mesh.py  materials.py  mesh_utilities.py  model_visualization.py  movement.py  ofdm.py  open_street_maps_geometry.py  path_helper.py  pem_core.py  post_processing.py  post_processing_radar_imaging.py  primitives.py  rcs.py  report_settings_reader.py  rotation.py  router.py  sar_setup_backend.py  scattering_centers.py  seastate.py  seastate2.py  (+11 more)
tests/: convert_vtp_to_glft.py  plot_compare.py  test_theta_phi_sweep_generator.py
(+153 files in other folders)
